--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ EMAIL_USERNAME=dilwaq22@gmail.com
 
 EMAIL_PASSWORD=bilo ouie pojj pscg
 # BASE_URL=http://localhost:3000
-NEXT_PUBLIC_API_URL=http://localhost:3000
+NEXT_PUBLIC_API_URL=https://murshadpk.vercel.app
 
 # BASE_URL=https://murshadpk.vercel.app
 
