--- a/.env
+++ b/.env
@@ -6,8 +6,8 @@ EMAIL_USERNAME=dilwaq22@gmail.com
 
 EMAIL_PASSWORD=bilo ouie pojj pscg
 # =http://localhost:3000
-NEXT_PUBLIC_API_URL=https://www.murshadpk.com/
+NEXT_PUBLIC_API_URL=http://localhost:3000
 
 # BASE_URL=https://murshadpk.vercel.app
-BASE_URL=https://www.murshadpk.com/
+BASE_URL=http://localhost:3000
 
