--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@heroicons/react": "^2.1.5",
+    "@mui/icons-material": "^6.1.3",
+    "@mui/material": "^6.1.3",
     "@prisma/client": "^5.17.0",
     "@reduxjs/toolkit": "^2.2.7",
     "@tailwindcss/line-clamp": "^0.4.4",
@@ -39,6 +41,7 @@
     "react-redux": "^9.1.2",
     "react-select": "^5.8.0",
     "react-slideshow-image": "^4.3.1",
+    "react-table": "^7.8.0",
     "react-tabs": "^6.0.2",
     "react-toastify": "^10.0.5",
     "three": "^0.167.1",
